weblogic/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-domain
  namespace: weblogic-sample
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: sample.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-domain-cluster-cluster-1
                port:
                  number: 8001
